# MWONGOZO-SMART

./: .gitignore  WORKFLOW.md  cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements-loan-ocr.txt  requirements.txt
backend/: __init__.py  admin_routes.py  app.py  auth_routes.py
backend/static/: api.js  auth.css  auth.js  help-panel.js  loan-tracker.js  mobile-responsive.css  navbar.css  news-feed.js  partner-logos.js  sam-chat.css  (+3 more)
mwongozo_smart/: __init__.py  loan_assistant.py  loan_guidance.py  loan_tracking.py
scripts/: _help_section.html  _loan_dashboard_snippet.html  _patch_loan_html.py  _patch_loan_js.py  apply_auth_schema.py  apply_loan_ui.py  backfill_catalogue_to_mysql.py  build_partner_svgs.py  dedupe_sqlite_catalogue.py  fetch_news_images.py  fetch_partner_logos.py  fix_render.py  fix_render2.py  fix_today_icon.py  import_guidebooks.py  loan_render_guidance.js  loan_ui_insert.js  optimize_hero_images.py  optimize_partner_logos.py  patch_help_html.py  patch_home_news.py  run_dev.ps1  verify_catalogue_parity.py
tests/: test_a_level_health.py  test_a_level_weak_profiles.py  test_admin_api.py  test_auth_service.py  test_calculator.py  test_catalog.py  test_catalogue_repository.py  test_combination_blocks.py  test_csee_division.py  test_engine.py  test_exam_lookup_acsee.py  test_exam_lookup_cache.py  test_exam_lookup_integration.py  test_exam_lookup_parser.py  test_institution_catalog.py  test_live_programmes.py  test_loan_guidance.py  test_o_level_diversity.py  test_o_level_health_gate.py  test_rules.py  test_saved_recommendations.py
(+82 files in other folders)
