[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mwongozo-smart"
version = "0.1.0"
description = "Hybrid university admission recommendation engine for Tanzania"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
