[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mwongozo-smart"
version = "0.1.0"
description = "Hybrid university admission recommendation engine for Tanzania"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.27",
  "httpx>=0.27,<1",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
loan_ocr = [
  "numpy>=1.26",
  "pillow>=12.2.0",
  "rapidfuzz>=3.14.5",
  "opencv-python-headless>=4.13.0.92",
  "easyocr>=1.7.2",
  "python-multipart>=0.0.27",
  "torch>=2.2",
  "torchvision>=0.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: exercises live HTTP against NECTA (requires RUN_NECTA_INTEGRATION=1)",
]
